# ClipboardServer

./: .dockerignore  .env.example  .gitignore  DATABASE_CONNECTION_FIX.md  DATABASE_FIX_SUMMARY.md  Dockerfile  README.md  README_CN.md  auth.py  config.py  connection_manager.py  crud.py  database.py  docker-compose.yml  email_service.py  log.py  main.py  models.py  pyproject.toml  schemas.py  uvicorn_log.json  verification_code_cache.py
static/: dashboard.html  index.html  script.js  style.css  test_fingerprint.html
test/: client.py  test_server.http
