[project]
name = "clipboard-server"
version = "0.1.0"
description = "Clipboard sync API server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "bcrypt==5.0.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
    "websockets>=16.0.0",
    "python-multipart>=0.0.27",
    "pymysql>=1.1.2",
    "cryptography>=47.0.0",
]

[project.optional-dependencies]
test = [
    "requests>=2.31.0"
]

[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true